enhance events display

--- a/popup/index.html
+++ b/popup/index.html
@@ -78,6 +78,17 @@
 				</tbody>
 			</table>
 			<section id="events">
+				<h2>GPA</h2>
+				<section id="gpa">
+					<div>
+						<h3>Weighted</h3>
+						<span>5.5182</span>
+					</div>
+					<div>
+						<h3>Unweighted</h3>
+						<span>3.5769</span>
+					</div>
+				</section>
 				<h2>Grades</h2>
 				<ul>
 					<li class="unread"><b>100</b> on "Slaughterhouse Five Test" in IB TAG Eng IV</li>
