enhance colours and stuff yo

--- a/popup/index.html
+++ b/popup/index.html
@@ -8,12 +8,12 @@
 	</head>
 	<body>
 		<header>
-			<img src="img/logoblue@2x.png" alt="QuickHAC logo">
+			<img src="img/logowhite@2x.png" alt="QuickHAC logo">
 			<h1 id="title">Quick<b>HAC</b></h1>
 			<span id="popup-actions">
-				<a href="#" class="fa fa-refresh"></a>
-				<a href="#" class="fa fa-gears"></a>
-				<a href="#" class="fa fa-sign-out"></a>
+				<a href="#" class="fa fa-refresh" title="Refresh"></a>
+				<a href="#" class="fa fa-gears" title="Options"></a>
+				<a href="#" class="fa fa-sign-out" title="Log out"></a>
 			</span>
 		</header>
 		<main>
@@ -29,66 +29,55 @@
 				<tbody>
 					<tr>
 						<td>IB Comp Sci HL I</td>
-						<td class="grade">100</td>
+						<td class="grade cycle">100</td>
 						<td class="grade">100</td>
 						<td class="grade">100</td>
 					</tr>
 					<tr>
 						<td>Philharmon Orch</td>
-						<td class="grade">100</td>
+						<td class="grade cycle">100</td>
 						<td class="grade">100</td>
 						<td class="grade">100</td>
 					</tr>
 					<tr>
 						<td>IB Euro Hist II</td>
-						<td class="grade">96</td>
+						<td class="grade cycle">96</td>
 						<td class="grade">96</td>
 						<td class="grade">93</td>
 					</tr>
 					<tr>
 						<td>IB TAG Eng IV</td>
-						<td class="grade"></td>
+						<td class="grade cycle"></td>
 						<td class="grade"></td>
 						<td class="grade"></td>
 					</tr>
 					<tr>
 						<td>IB Theo/Know - F</td>
-						<td class="grade"></td>
+						<td class="grade cycle"></td>
 						<td class="grade"></td>
 						<td class="grade"></td>
 					</tr>
 					<tr>
 						<td>IB TAG Eng IV</td>
-						<td class="grade">98</td>
+						<td class="grade cycle">98</td>
 						<td class="grade">Exc</td>
 						<td class="grade">94</td>
 					</tr>
 					<tr>
 						<td>AP Physics C</td>
-						<td class="grade">98</td>
+						<td class="grade cycle">98</td>
 						<td class="grade">Exc</td>
 						<td class="grade">94</td>
 					</tr>
 					<tr>
 						<td>IB Math HL</td>
-						<td class="grade">94</td>
+						<td class="grade cycle">94</td>
 						<td class="grade">96</td>
 						<td class="grade">96</td>
 					</tr>
 				</tbody>
 			</table>
 			<section id="events">
-				<h2>GPA</h2>
-				<section id="gpa">
-					<div>
-						<h3>Weighted</h3>
-						<span>5.5182</span>
-					</div>
-					<div>
-						<h3>Unweighted</h3>
-						<span>3.5769</span>
-					</div>
-				</section>
 				<h2>Grades</h2>
 				<ul>
 					<li class="unread"><b>100</b> on "Slaughterhouse Five Test" in IB TAG Eng IV</li>
@@ -106,6 +95,11 @@
 				<span class="show-more">Show more&hellip;</span>
 			</section>
 		</main>
+		<footer>
+			<span id="updated">Updated 43 minutes ago</span>
+			<span id="gpa">GPA: 5.5182/3.5769</span>
+			<a href="#" id="expand" class="fa fa-expand" title="Open full view"></a>
+		</footer>
 
 		<script src="js/index.js"></script>
 	</body>
