switch updated and gpa positions in footer

--- a/popup/index.html
+++ b/popup/index.html
@@ -96,8 +96,8 @@
 			</section>
 		</main>
 		<footer>
+			<span id="gpa">GPA: <b>5.5182</b> / <b>3.5769</b></span>
 			<span id="updated">Updated 43 minutes ago</span>
-			<span id="gpa">GPA: 5.5182/3.5769</span>
 			<a href="#" id="expand" class="fa fa-expand" title="Open full view"></a>
 		</footer>
 
