--- a/popup/index.html
+++ b/popup/index.html
@@ -95,11 +95,14 @@
 				<span class="show-more">Show more&hellip;</span>
 			</section>
 		</main>
-		<footer>
+		<footer style="overflow: hidden;">
 			<span id="gpa">GPA: <b>5.5182</b> / <b>3.5769</b></span>
 			<span id="updated">Updated 43 minutes ago</span>
 			<a href="#" id="expand" class="fa fa-expand" title="Open full view"></a>
 		</footer>
+		<div style="position: absolute; width: 600px">
+			Notes: If you click on a grade in the final version, it will take you to the full view, which is a whole webpage. We have not designed that yet, but we will soon. This view is only supposed to show you exactly what you need 95% of the time. BTW, safari would work best for this.
+		</div>
 
 		<script src="js/index.js"></script>
 	</body>
