change temp wording

--- a/popup/index.html
+++ b/popup/index.html
@@ -101,7 +101,7 @@
 			<a href="#" id="expand" class="fa fa-expand" title="Open full view"></a>
 		</footer>
 		<div style="position: absolute; width: 600px">
-			Notes: If you click on a grade in the final version, it will take you to the full view, which is a whole webpage. We have not designed that yet, but we will soon. This view is only supposed to show you exactly what you need 95% of the time. BTW, safari would work best for this.
+			Notes: If you click on a grade in the final version, it will take you to the full view, which is a whole webpage. We have not designed that yet, but we will soon. This popup view is only supposed to show you exactly what you need 95% of the time. BTW, a webkit-based browser will work best for this.
 		</div>
 
 		<script src="js/index.js"></script>
